--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 PORT = 3000
+
+DATABASE_URL = 'mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb.net/?retryWrites=true&w=majority'
+
+
+MONGO_HOST = 
+MONGO_PORT = 
+MONGO_DB = pse-db
