--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts",
+  "name": "Shop-shoes",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -9,20 +9,31 @@
     "start": "node build/index.js",
     "dev": "nodemon build/index.js",
     "server": "nodemon --exec ts-node src/index.ts",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "migrate": "prisma migrate dev --name",
+    "prisma:migrate": "prisma migrate dev --skip-seed",
+    "prisma:format": "prisma format",
+    "prisma:generate": "prisma generate"
   },
-  "author": "",
+  "author": "Johnny Lee",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.5.1",
+    "rotating-file-stream": "^3.0.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.6.4",
+    "helmet": "^5.1.1",
+    "i": "^0.3.7",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
+    "npm": "^8.16.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
