update connect db

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 3000
 
 
-DATABASE_URL="mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb.net/shop_nst?retryWrites=true&w=majority"
