--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^5.1.1",
     "mongodb": "^4.8.1",
-    "mongoose": "^6.5.1"
+    "mongoose": "^6.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.6.4",
     "nodemon": "^2.0.19",
+    "rotating-file-stream": "^3.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
