--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ PORT = 3000
 DATABASE_URL="mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb.net/shop_nst?retryWrites=true&w=majority"
 
 
-NODE_ENV = 
+NODE_ENV = "production"
