--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production node build/index.js",
+    "start": "node build/index.js",
     "dev": "nodemon build/index.js",
     "server": "nodemon --exec ts-node src/index.ts",
     "watch": "tsc -w"
