--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ PORT = 3000
 
 DATABASE_URL="mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb.net/shop_nst?retryWrites=true&w=majority"
 
+
+
+ACCESS_TOKEN_SECRET_KEY = "8f1c192046e4f1a2ad1110dcf7bea21e"
