feature(#shop-shoes-01): auth api 70%

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DATABASE_URL="mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb
 
 
 
-ACCESS_TOKEN_SECRET_KEY = "8f1c192046e4f1a2ad1110dcf7bea21e"
+ACCESS_TOKEN_SECRET_KEY = 8f1c192046e4f1a2ad1110dcf7bea21e
