--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DATABASE_URL="mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb
 
 
 ACCESS_TOKEN_SECRET_KEY = 8f1c192046e4f1a2ad1110dcf7bea21e
+
+REFRESH_TOKEN_SECRET_KEY = 8f1c192046e4f1a2ad2220dcf7bea21e
