add api upload file

--- a/.env
+++ b/.env
@@ -8,3 +8,12 @@ DATABASE_URL="mongodb+srv://shop-shoes:bs2zVGdRneIe9wHE@cluster0.i4rykqo.mongodb
 ACCESS_TOKEN_SECRET_KEY = 8f1c192046e4f1a2ad1110dcf7bea21e
 
 REFRESH_TOKEN_SECRET_KEY = 8f1c192046e4f1a2ad2220dcf7bea21e
+
+
+
+CLIENT_ID = 853029925451-2up9jpnq0p03k6tcnnlki3jf70kd4tem.apps.googleusercontent.com
+
+CLIENT_SECRET = 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
+REDIRECT_URI = https://www.googleapis.com/auth/drive
+REFRESH_TOKEN = 1//04MY6CP3v7BOvCgYIARAAGAQSNwF-L9Ir6gWPUhV9hLj5QbvWrw_93X6VtKuMe8XeN5nYRcVglkQJbrZ0XBqmP7C6XGzzA3StPdc
+
